[package]
name = "stable-vec"
version = "0.2.2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = """
A Vec-like collection which guarantees stable indices and features O(1) deletion of elements
"""
documentation = "https://docs.rs/stable-vec"
repository = "https://github.com/LukasKalbertodt/stable-vec"
license = "MIT/Apache-2.0"
keywords = ["stable", "vec", "vector", "index", "indices"]
categories = ["data-structures"]
readme = "README.md"

[badges]
travis-ci = { branch = "master", repository = "LukasKalbertodt/stable-vec" }
maintenance = { status = "actively-developed" }


[dependencies]
bit-vec = "0.5.0"

[dev-dependencies]
quickcheck = "0.7"
